--- a/logstashcsv.conf
+++ b/logstashcsv.conf
@@ -1,16 +1,26 @@
 input { 
   file { 
-    path => "F:/ELk/cvsdata/quakes_month_02.csv" 
+    path => "F:/ELk/cvsdata/quakes_month.csv" 
     start_position => "beginning" 
   }
 }
 
 filter { 
   csv { 
-    columns => [ "net", "id", "place", "type",  "status",  "locationSource",  "magSource" ] 
+    columns => [ "time", "latitude", "longitude", "depth", "mag", "magType", "rms", "net", "id", "updated", "place", "type", "status", "locationSource",  "magSource"] 
     separator => "," 
     skip_header => "true"
     }
+
+  mutate {convert => ["atitude", "float"] }
+  mutate {convert => ["longitude", "float"] }
+  mutate {convert => ["depth", "float"] }
+  mutate {convert => ["mag", "float"] }
+  mutate {convert => ["rms", "float"] } 
+
+  date { match => ["time", "MMM dd, YYYY hh:mm:ss Z"]} 
+ date {match => ["updated", "MMM dd, YYYY hh:mm:ss Z"]} 
+
 }
 
 output { 
@@ -19,6 +29,6 @@ output {
   }
   elasticsearch {  
     action => "index" 
-    index => "quekes_2" 
+    index => "quekes_4" 
   }
 }
